--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Guide app by RTK</string>
-    <string name="title_activity_maps">ありがとうございました</string>
+    <string name="title_activity_maps">盲導盤</string>
     <string name="bluetooth_state">Bluetooth State :</string>
     <string name="gps_state">GPS State :</string>
     <string name="connect">Connect</string>
